Sat Feb 17 02:25:45 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/functions.c: fixed a bug with generate-id()

Sat Feb 17 00:51:53 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/xsltutils.c: started doing more useful stuff in
	  xsltDebug
	* libxslt/transform.[ch] libxslt/variables.[ch] libxslt/templates.c
	  libxslt/xsltInternals.h: changed the way variables/params
	  are stored
	* libxslt/xsltproc.c: removed a pedantic warning
	* libxslt/variables.[ch]: found an ugly evaluation bug

Thu Feb 15 18:14:48 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* tests/REC/Makefile.am: updated

Thu Feb 15 17:40:28 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxlst/functions.c: fixed ID generation
	* doc/xslt.html doc/html/*.html: updated/regenerated the doc

Thu Feb 15 13:34:42 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/numbers.c: removed a couple of memleaks

Thu Feb 15 12:41:44 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.[ch]: exported pattern matching interfaces
	  for numbers.c and future debug module
	* libxslt/numbers.c: updated to new interface, should avoid
	  unnecessary recompilation of patterns.
	* libxslt/xsltutils.[ch]: cleanup
	* tests/REC/gmon.out: removed :-)

Wed Feb 14 19:13:33 CET 2001 Bjorn Reese <breese@users.sourceforge.net>

	* libxslt/numbers.c: implemented level=any
	* libxslt/transform.c: corrected some default values
	* tests/REC/test-7.7-*.*: added

Wed Feb 14 18:07:25 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* libxslt/pattern.c: priorities were horribly broken, hope it's
	  fixed

Wed Feb 14 15:39:06 CET 2001 Daniel Veillard <Daniel.Veillard@imag.fr>

	* FEATURES libxslt/imports.h libxslt/pattern.[ch]
	  libxslt/xsltInternals.h libxslt/transform.[ch]
	  libxslt/templates.c libxslt/xslt.c:
	  Added apply-imports, keep a stack of running templates
	* libxslt/xsltutils.c: bugfixes, gather the output informations
	  down the cascade